; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/libretro/extr_scrc32.c_crc32.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/libretro/extr_scrc32.c_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @crc32(i64 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i8*, i8** %6, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %37

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = xor i64 %12, 4294967295
  store i64 %13, i64* %5, align 8
  br label %14

14:                                               ; preds = %17, %11
  %15 = load i32, i32* %7, align 4
  %16 = icmp uge i32 %15, 8
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @DO8_CRC32(i8* %18)
  %20 = load i32, i32* %7, align 4
  %21 = sub i32 %20, 8
  store i32 %21, i32* %7, align 4
  br label %14

22:                                               ; preds = %14
  %23 = load i32, i32* %7, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %34

25:                                               ; preds = %22
  br label %26

26:                                               ; preds = %29, %25
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @DO1_CRC32(i8* %27)
  br label %29

29:                                               ; preds = %26
  %30 = load i32, i32* %7, align 4
  %31 = add i32 %30, -1
  store i32 %31, i32* %7, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %26, label %33

33:                                               ; preds = %29
  br label %34

34:                                               ; preds = %33, %22
  %35 = load i64, i64* %5, align 8
  %36 = xor i64 %35, 4294967295
  store i64 %36, i64* %4, align 8
  br label %37

37:                                               ; preds = %34, %10
  %38 = load i64, i64* %4, align 8
  ret i64 %38
}

declare dso_local i32 @DO8_CRC32(i8*) #1

declare dso_local i32 @DO1_CRC32(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
